Fix release bundling and launcher icon